# ARGoS-Scripting

./: .gitignore  CMakeLists.txt  README.md
controllers/: CMakeLists.txt
controllers/lua_controller/: .#foraging_controller.lua  CMakeLists.txt  argos-converters.cpp  argos-converters.hpp  argos-fixups.hpp  foraging-controller.lua  foraging_controller.lua  lua-controller.cpp  lua-controller.h  lua-wrapper.h  lua_controller.cpp  lua_controller.h  lua_wrapper.cpp
lua/: argos-converters.cpp  argos-converters.hpp  argos-fixups.hpp  argos-lua-wrapper.cpp  argos-lua-wrapper.h  argos-lua.i  build-swig-wrapper.sh
xml/: lua-controller.xml  lua-headless.xml
